# tomt

./: .tomlfmt.toml  Cargo.toml  LICENSE.MIT  README.md
.github/workflows/: build.yaml
src/: lib.rs  main.rs
