[package]
authors = [ "Josh Junon (https://github.com/qix)" ]
description = "TOML formatter CLI and library"
edition = "2024"
homepage = "https://github.com/oro-os/toml"
license = "MIT OR Apache-2.0"
name = "tomt"
repository = "https://github.com/oro-os/tomt"
version = "0.1.0"
categories = [
	"command-line-utilities",
	"development-tools",
	"development-tools::testing",
]

[lib]
name = "tomt"
path = "src/lib.rs"

[[bin]]
name = "tomt"
path = "src/main.rs"

[features]
clap    = [ "dep:clap" ]
default = [ "clap" ]

[dependencies]
clap      = { version = "4.5.60", features = [ "derive" ], optional = true }
fast-glob = "1.0.0"
ignore    = "0.4.25"
taplo     = { version = "0.14.0", features = [ "serde" ] }
toml      = "1.0.3"
